--- a/open_diloco/configs/config_1b.json
+++ b/open_diloco/configs/config_1b.json
@@ -1,9 +1,10 @@
 {
-  "name": "llama",
+  "name": "llama1b",
   "n_embd": 2048,
   "intermediate_size": 5632,
   "n_head": 32,
   "n_layer": 22,
   "n_query_groups": 4,
-  "vocab_size": 1024
+  "vocab_size": 32000,
+  "block_size": 1024
 }
