--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 transformers~=4.40
 datasets>=2.19.1
-wandb==0.16.4
+wandb>=0.16.4
 cyclopts>=2.6.1
 fsspec[gcs]>=2024.3.1
-torch==2.3.1
+torch>=2.3.1
+hivemind @ git+https://github.com/learning-at-home/hivemind.git@213bff9
+pydantic_config @ git+https://github.com/samsja/pydantic_config.git@8e19e05
+
